--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -9,15 +9,16 @@
         </ul>
         <p class="rk-footer__text rk-footer__copy "> 
             <span class="ae-u-bold">© </span>
-            <span class="ae-u-bolder">{{year}} ACHAVEZ PORTFOLIO </span>All Right Reserved.</p>
+            <span class="ae-u-bolder">{{year}} {{infoPaginaService.info.title}} </span>All Right Reserved.</p>
       </div>
-      <div class="ae-grid__item item-lg-4 au-xs-ta-center"><a href="#0" class="rk-social-btn ">
+      <div class="ae-grid__item item-lg-4 au-xs-ta-center">
+        <a href="infoPaginaService.info.facebook" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
-          </svg></a><a href="#0" class="rk-social-btn ">
+          </svg></a><a [href]="infoPaginaService.info.twitter" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-twitter"></use>
-          </svg></a><a href="#0" class="rk-social-btn ">
+          </svg></a><a [href]="" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-pinterest"></use>
           </svg></a><a href="#0" class="rk-social-btn ">
@@ -28,10 +29,9 @@
         <p class="rk-footer__text rk-footer__contact "> 
             <span class="ae-u-bold">Email: </span>
             <span class="ae-u-bolder"> 
-                <a href="#0" class="rk-dark-color ">adanch22@gmail.com 
-                </a>
+                <a href="#0" class="rk-dark-color ">{{infoPaginaService.info.email}}</a>
             </span></p>
-        <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Pixeden.</a></p>
+        <p class="rk-footer__text">Theme by <a [href]="infoPaginaService.info.page_author" class="ae-u-bolder">Pixeden.</a></p>
       </div>
     </div>
 </footer>
